--- a/.github/workflows/bad-pipeline.yml
+++ b/.github/workflows/bad-pipeline.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
+          cd lab3
           mkdir build
           cp main.py build/main.py
 
@@ -22,9 +23,11 @@ jobs:
         with:
           python-version: 3.12
       - run: |
+          cd lab3
           python -m pip install --upgrade pip
           pip install pytest
       - run: |
+          cd lab3
           pytest test_main.py
 
   deploy:
@@ -32,4 +35,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
+          cd lab3
           scp build/main.py user@production:/app/main.py
